<resources>
    <string name="app_name">Presiden RI</string>
    <string name="desc">Desc</string>
    <string name="title">Title</string>
    <string name="about">About</string>
    <string name="my_name">Arif Widayana</string>
    <string name="product_name">Product Name</string>
    <string name="product_expired">Product Expired</string>
    <string name="product_desc_title">Deskripsi Produk</string>
    <string name="description">Description</string>
    <string name="detail_product">Detail Product</string>
    <string name="share_product">Share Product</string>
    <string name="share_product_to">Share products to…</string>
    <string name="email">arifwidayana@gmail.com</string>
</resources>